fixed homepage layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a {
 }
 
 .category-btn:hover {
-  background-color: #fc1503 !important;
+  background-color: #00c7ff !important;
   color: white !important;
 }
 
